Fixed plotly issue in collapsible containers, should be able to see Plots now without distortion. The fix was to reverse the logic and run an onload function to close all containers on load. This needs to be kept in mind for future edits of this file, and for other files with similar structure.

--- a/Presentation Files/src/presentation_css.css
+++ b/Presentation Files/src/presentation_css.css
@@ -133,23 +133,22 @@
     /* Expandable Container*/
 
     .expandable-container {
-      display: none;
-      padding: 0px;
-      border: 0px solid #ccc;
-      border-radius: 0px;
-      background-color: #f8f8f8;
-    }
-
-    .expandable-container.show {
       display: block;
     }
 
-    .expandable-container iframe {
-      /* Define your custom styles for the plots inside expandable containers here */
+    .expandable-container.hide {
+      display: none;
+      /* padding: 0px;
+      border: 0px solid #ccc;
+      border-radius: 0px;
+      background-color: #f8f8f8; */
+    }
+
+    /* .expandable-container iframe {
       display: block;
       object-fit: fill;
       border: none;
       border-radius: 4px;
       margin-top: 10px;
 
-    }
+    } */
